fix(menu): adicionar z-index

--- a/frontend/directives/menu/menu.scss
+++ b/frontend/directives/menu/menu.scss
@@ -11,10 +11,11 @@
 }
 
 .menu-overlay {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-color: hsla(0, 0, 0, .4);
+    z-index: 999;
 }
 
 #sidemenu {
